		instructions, including samepage variants.
		Reimplementing the M88K stcr, jmp, and tb0 and tb1
		instructions.
		Fixing a bug in the MRU list in DyntransTranslationCache.
		Fixing disassembly of tb0 and tb1, and implementing the
		rest of the bcnd conditions.
		Beginning on reimplementing MIPS (slow) loads/stores,
		and reimplementing the MIPS addu, subu, srl, xor, multu,
		mfhi, mflo, mthi, and mtlo instructions.
20100207	Reimplementing the MIPS slt and sltu instructions, various
		branch instructions, and fixing some bugs; the rectangle
		drawing demo for testmips runs in the new framework :)
		Switching function call trace on/off during runtime now
		clears [individual] translation pages.
20100213	Working on dyntrans abort peculiarities (in the middle of
		delay-slots, etc).
20100214	Preparing for a quick 0.6.0 release.

==============  RELEASE 0.6.0  ==============

20100214	Fixing order of machine.html and components.html generation,
		relative to individual machines from skeleton files.
20100220	Improve install path guessing (DESTDIR and MANDIR) based on
		feedback from Tom Callaway.
		Moving the multiple identical instances of parse_number and
		SplitStringIntoVector to a new StringHelper class, and adding
		some unit tests.
		Adding a PluginDescriptor class, for parsing plugin descriptor
		strings (component:plugin(args):filename etc).
		Beginning on the new plugin mechanism: adding an 'attach'
		command, to be used instead of 'load'.
20100222	Scrapping the "plugin" concept; the already existing component
		framework should hopefully be enough as it is.
20100314	Updating doc/translation.html with more examples on how the
		dyntrans system works (in pre-0.6.x and in 0.6.x).
20100319	Fixing flawed mymkstemp by also passing O_CREAT | O_EXCL (used
		on systems without mkstemp) (reported as Debian bug #574537).
20100322	const fixes, enabling builds using GCC's -Wcast-qual.
		Fixes to allow build using GCC's -Wshadow.